Final AS2 Submitted

--- a/styles/story.css
+++ b/styles/story.css
@@ -1,3 +1,7 @@
-p::first-letter /* Emphasising first letter of each paragraph */
-{color:#412814;
-font-size: 2em;}
+p::first-letter
+
+/* Emphasising first letter of each paragraph */
+    {
+    color: #412814;
+    font-size: 2em;
+}
