--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,4 @@
-p::first-letter /* Emphasising first letter of each paragraph */
-{color:#412814;
-font-size: 2em;}
-
+p::first-letter /* Emphasising first letter of each paragraph */ {
+  color: #412814;
+  font-size: 2em;
+}
