--- a/default.css
+++ b/default.css
@@ -94,6 +94,12 @@ main {
   display: none;
 }
 
+.staff{
+background-color:#849ca8;
+padding: 10px;
+display: inline-block;
+}
+
 /* Adjustments set to respond to different sized viewports */
 
 @media screen and (max-width: 600px) {
@@ -121,8 +127,8 @@ main {
     text-align: left;
   }
 }
-
-.logo /* Style logo in header */ {
+/* Style logo*/
+.logo  {
   padding-left: 10px;
   padding-right: 10px;
   display: flex;
@@ -144,6 +150,9 @@ main {
     max-width: 80%;
   }
 }
+
+/* End of logo styling*/
+
 .face {
   padding: 10px;
   width: 100%;
@@ -193,7 +202,7 @@ footer a /* Style/format the links inside footer */ {
   justify-content: space-evenly;
 }
 
-.menu-image img /* Format of images in gallery class */ {
+.menu-image img  {
   max-width: 50%;
   height: auto;
   padding: 20px;
@@ -328,12 +337,11 @@ footer a /* Style/format the links inside footer */ {
 
 /* Google Contact form */
 
-.form {
-  /* org form width="640" height="1549" frameborder="0" marginheight="0" marginwidth="0"*/
+.form{ /* org form width="640" height="1549" frameborder="0" marginheight="0" marginwidth="0"*/
   width: 100%;
   max-width: 640px;
   height: 100%;
-  border: 0;
+  border: 0; 
 }
 
 /* Menu text only formatting styles*/
