--- a/styles/default.css
+++ b/styles/default.css
@@ -96,6 +96,8 @@ main {
 
 .staff{
 background-color:#849ca8;
+padding: 10px;
+display: inline-block;
 }
 
 /* Adjustments set to respond to different sized viewports */
@@ -314,7 +316,7 @@ footer a /* Style/format the links inside footer */ {
   text-decoration: underline;
 }
 
-/* Google Calender */
+/* Google Calenders - Reservations and Roster */
 .calendar {
   border: solid 2px;
   border-color: #849ca8;
@@ -416,3 +418,24 @@ header {
 }
 
 /* End of menu page formatting*/
+
+.container{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.container > div{
+  margin: 5px;
+  padding:10px;
+  width: 50%;
+}
+
+.staffnames{
+  border: solid 4px;
+  border-color: #849ca8;
+  padding:10px;
+}
+
+.under{
+border-bottom: 1px dashed #412814;
+}
