--- a/css/default.css
+++ b/css/default.css
@@ -4,89 +4,108 @@
    text-transform: uppercase;
    Font-weight: normal/bold/lighter/900 very bold*/
 
-   * {
+* {
   margin: 0;
   padding: 0;
-box-sizing: border-box;}
-  
-   
- h1 /* Headline 1 formatting/style */
- {color:#412814; /* Colour of text */
- font-family: Merriweather;  /* Font type to display */
-  /* font-size: 2em; Size of text with EM which allows users to resize text - 1em = 16px to calculate pixels/16=em*/
- font-style: normal; /* Specifies the font style for a text. normal/oblique/italic */
- font-weight: bold;} /* Defines weight of font */
-  
-  h2,h3 /* Headline 2/3 formatting/style */
- {color: #412814; 
+  box-sizing: border-box;
+}
+
+h1 /* Headline 1 formatting/style */ {
+  color: #412814; /* Colour of text */
   font-family: Merriweather; /* Font type to display */
-  text-align: center;} /* Headline 2 formatting/style */
+  /* font-size: 2em; Size of text with EM which allows users to resize text - 1em = 16px to calculate pixels/16=em*/
+  font-style: normal; /* Specifies the font style for a text. normal/oblique/italic */
+  font-weight: bold;
+} /* Defines weight of font */
 
-  h4 
-  {color: #412814; 
-   font-family: Merriweather; /* Font type to display */
-   font-weight: bold;
-   font-size: 1em;
-  margin: 0;} 
+h2,h3 /* Headline 2/3 formatting/style */ {
+  color: #412814;
+  font-family: Merriweather; /* Font type to display */
+  text-align: center;
+} /* Headline 2 formatting/style */
 
-  h5 
-  {color: #EDE0D4; 
-   font-family: Merriweather; /* Font type to display */
-   text-transform: uppercase;
-   font-size: 1em;} 
+h4 {
+  color: #412814;
+  font-family: Merriweather; /* Font type to display */
+  font-weight: bold;
+  font-size: 1em;
+  margin: 0;
+}
 
-  p /* Paragraph */
- {color:#412814;
- font-family: Arial, Helvetica, sans-serif;
- font-size: 1em; 
- text-align: center;}
+h5 {
+  color: #ede0d4;
+  font-family: Merriweather; /* Font type to display */
+  text-transform: uppercase;
+  font-size: 1em;
+}
 
+p /* Paragraph */ {
+  color: #412814;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1em;
+  text-align: center;
+}
 
- body /* Body element formatting/style */
- {margin: 0 auto; /* Margin */
-  overflow-x:hidden; /* Hides bottom scroll bar*/
-  background-color:#EDE0D4; /* Background page colour display */
+body /* Body element formatting/style */ {
+  margin: 0 auto; /* Margin */
+  overflow-x: hidden; /* Hides bottom scroll bar*/
+  background-color: #ede0d4; /* Background page colour display */
   text-align: center; /* Text alignment display */
   text-decoration: none;
   font-family: Arial, Helvetica, sans-serif; /* Font type to display */
-  font-size: 100%;} /* Set to 100% here to allow for a change in web browsers */
-  
-header{
-  background-color: #EDE0D4;
+  font-size: 100%;
+} /* Set to 100% here to allow for a change in web browsers */
+
+header {
+  background-color: #ede0d4;
   overflow: hidden;
 }
 
-main{padding-top: 20px;}
+main {
+  padding-top: 20px;
+}
 
 /* Nav formatting starts here */
-.topnav /* Format and style fixed banner container*/
- { overflow: hidden; /* Text alignment display */
-  background-color: #2D4A58;
+.topnav /* Format and style fixed banner container*/ {
+  overflow: hidden; /* Text alignment display */
+  background-color: #2d4a58;
   text-align: center;
   padding: 20px;
-  width: 100%;}
+  width: 100%;
+}
 
- .topnav a /* Style the links inside the banner - navigation bar */
- {color: #EDE0D4;
+.topnav a /* Style the links inside the banner - navigation bar */ {
+  color: #ede0d4;
   padding: 15px;
   text-decoration: none;
-  text-align: center;}
+  text-align: center;
+}
 
- .topnav a:hover /* Change the colour of links when hovering over them in nav bar */
- {background-color: #849ca8;}
+.topnav a:hover /* Change the colour of links when hovering over them in nav bar */ {
+  background-color: #849ca8;
+}
 
- .topnav a.active /* Add colour to the active/current link */
- { background-color: #412814;
- padding: 20px; } 
-   
- .topnav .icon {
+.topnav a.active /* Add colour to the active/current link */ {
+  background-color: #412814;
+  padding: 20px;
+}
+
+.topnav .icon {
   display: none;
+}
+
+.staff{
+background-color:#849ca8;
+padding: 10px;
+display: inline-block;
 }
 
 /* Adjustments set to respond to different sized viewports */
 
 @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
+  .topnav a:not(:first-child) {
+    display: none;
+  }
   .topnav a.icon {
     float: right;
     display: block;
@@ -94,11 +113,13 @@ main{padding-top: 20px;}
 }
 
 @media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
+  .topnav.responsive {
+    position: relative;
+  }
   .topnav.responsive .icon {
     position: absolute;
     right: 0;
-    top: 0;;
+    top: 0;
   }
   .topnav.responsive a {
     float: none;
@@ -106,143 +127,153 @@ main{padding-top: 20px;}
     text-align: left;
   }
 }
-
- .logo /* Style logo in header */
- {padding-left: 10px;
+/* Style logo*/
+.logo  {
+  padding-left: 10px;
   padding-right: 10px;
   display: flex;
   width: 100%;
   max-width: 450px;
-  height: auto;}
+  height: auto;
+}
 
- .face{
-  padding: 10px;  
+@media screen and (max-width: 800px) {
+  .logo {
+    flex: 100%;
+    max-width: 80%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .logo {
+    flex: 100%;
+    max-width: 80%;
+  }
+}
+
+/* End of logo styling*/
+
+.face {
+  padding: 10px;
   width: 100%;
   max-width: 600px;
-  height: auto
- }
+  height: auto;
+}
 
-/* Footer section formatting/style  */ 
-  footer 
-  {overflow: hidden;
+/* Footer section formatting/style  */
+footer {
+  overflow: hidden;
   padding: 10px;
-  background-color: #2D4A58;
-  right: 0; 
-  left:0; 
+  background-color: #2d4a58;
+  right: 0;
+  left: 0;
   width: 100%;
   position: absolute;
-  margin-top: 5px;} 
-  
-  footer a /* Style/format the links inside footer */
-  {padding: 10px;
-  text-decoration: none; 
-  color: #ede0d4;}
+  margin-top: 5px;
+}
 
- .copyright
-{text-decoration: none; 
- color: #ede0d4;
-float:left;
-font-size: 12px;
-padding-left: 5px;}
+footer a /* Style/format the links inside footer */ {
+  padding: 10px;
+  text-decoration: none;
+  color: #ede0d4;
+}
 
-.socials{
-padding: 10px;
+.copyright {
+  text-decoration: none;
+  color: #ede0d4;
+  float: left;
+  font-size: 12px;
+  padding-left: 5px;
+}
+
+.socials {
+  padding: 10px;
+}
+
+.story {
+  margin: 10px;
 }
 
 /* end of footer formatting*/
 
-/* Formatting/styling Menu Images  */  
-  .menu-image /* Adding margin to the gallery class */
-  {margin: 10px 40px;
-  justify-content: space-evenly;}
-  
-  .menu-image img /* Format of images in gallery class */
-  {max-width: 50%; 
+/* Formatting/styling Menu Images  */
+.menu-image /* Adding margin to the gallery class */ {
+  margin: 10px 40px;
+  justify-content: space-evenly;
+}
+
+.menu-image img  {
+  max-width: 50%;
   height: auto;
   padding: 20px;
-  filter: grayscale(80%)}
-  
-  .menu-image img:hover /* Hover effect added, images enlarge and colour returns */
-  {filter: grayscale(0);
+  filter: grayscale(80%);
+}
+
+.menu-image img:hover /* Hover effect added, images enlarge and colour returns */ {
+  filter: grayscale(0);
   transform: scale(1.1);
-  overflow:hidden;}
+  overflow: hidden;
+}
 
-    /* Formatting button on form to download Menu */  
-    button {
-      display: inline-block;
-      background-color: #2D4A58;
-      padding: 10px;
-      width: 150px;
-      color: #EDE0D4;
-      text-align: center;
-      text-decoration: underline;}
+/* Formatting button on form to download Menu */
+.fullmenu {
+  display: inline-block;
+  background-color: #2d4a58;
+  font-size: 1em;
+  padding: 10px;
+  color: #ede0d4;
+  text-align: center;
+  text-decoration: underline;
+}
 
-  .interior, .koru,.salmon, .dining 
-  {opacity: 0.9;
+.interior,
+.koru {
+  opacity: 0.9;
   padding: 20px;
-  max-width: 95%;
-  height: auto}
+  max-width: 80%;
+  height: auto;
+}
 
-  .salmon, .dining 
-  {opacity: 0.9;
+.salmon,
+.dining {
+  opacity: 0.9;
   padding: 20px;
-  max-width: 75%;
-  height: auto}
+  max-width: 70%;
+  height: auto;
+}
 
-  .mussels, .red, .bread, .icecream{
+.mussels,
+.red,
+.bread,
+.icecream {
   width: 30%;
-  max-width: 450px;
+  max-width: 350px;
   height: auto;
   padding-bottom: 20px;
   border-radius: 30%;
-  }
+}
 
-  .bay{
-    width: 50%;
-    max-width: 450px;
-    height: auto;
-    border-radius: 20px 20px 20px 20px;
-    }
-    
-  .owners{  /* Org 5760 x 3840*, resized 490,327*/
-  padding: 10px;  
+.bay {
+  width: 50%;
+  max-width: 450px;
+  height: auto;
+  border-radius: 20px 20px 20px 20px;
+}
+
+.owners {
+  /* Org 5760 x 3840*, resized 490,327*/
+  padding: 10px;
   width: 100%;
   max-width: 600px;
-  height: auto}
+  height: auto;
+}
 
-  /* End of Image styling*/
-
-/* Google Calender */
-  .calendar{
-  border:solid 2px; 
-  border-color: #849ca8;
-  width:100%;
-  max-width: 700px;
-  height: 500px;
-  margin-bottom: 20px;}
-  
- /* Google Map sizing/style */  
-  .map 
-  {max-width: 100%;
-  width: 480px;
-  height: 500px;
-   padding: 10px;
-   border:0;}
-  
-
-/* Google Contact form */    
-
-  .form{ /* org form width="640" height="1549" frameborder="0" marginheight="0" marginwidth="0"*/
-    width: 100%;
-    max-width: 640px;
-    height: 100%;
-    border: 0; }
+/* End of Image styling*/
 
 /* Style the images inside the gallery grid */
 
 /* Gallery grid: two equal columns that float next to each other */
 .column {
-  float: left;
   width: 50%;
   padding: 15px;
 }
@@ -252,46 +283,170 @@ padding: 10px;
 }
 
 /* Hover effect added, images enlarge and colour returns */
-.column img:hover { 
+.column img:hover {
   opacity: 1;
   filter: grayscale(0);
   transform: scale(1.1);
-  overflow:hidden;}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
+  overflow: hidden;
 }
 
-/* The expanding image container */
-.container {
-  position: relative;
-  display: none;
-}
-
-/* Makes a single column-layout instead of two columns */
+/* Makes a single column-layout instead of two columns reducing size bases on pixels for mulitple devices */
 @media screen and (max-width: 800px) {
   .column {
-    -ms-flex: 50%;
-    flex: 50%;
-    max-width: 50%;
+    flex: 100%;
+    max-width: 100%;
   }
 }
 
 @media screen and (max-width: 600px) {
   .column {
-    -ms-flex: 100%;
     flex: 100%;
-    max-width: 100%;
+    max-width: 90%;
   }
 }
 /* End of Gallery styling*/
 
-.booknow{
-  border: #2D4A58;
-  border-width: 5px;
-  border-style: outset;
-  margin: 40px;
+.booknow {
+  display: inline-block;
+  background-color: #2d4a58;
+  font-size: 1em;
+  padding: 20px;
+  color: #ede0d4;
+  text-align: center;
+  text-decoration: underline;
+}
+
+/* Google Calenders - Reservations and Roster */
+.calendar {
+  border: solid 2px;
+  border-color: #849ca8;
+  width: 90%;
+  max-width: 700px;
+  height: 500px;
+  margin-bottom: 20px;
+}
+
+/* Google Map sizing/style */
+.map {
+  max-width: 100%;
+  width: 480px;
+  height: 500px;
+  padding: 10px;
+  border: 0;
+}
+
+/* Google Contact form */
+
+.form{ /* org form width="640" height="1549" frameborder="0" marginheight="0" marginwidth="0"*/
+  width: 100%;
+  max-width: 640px;
+  height: 100%;
+  border: 0; 
+}
+
+/* Menu text only formatting styles*/
+
+.menu-page {
+  display: flex;
+  list-style-type: none;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0 auto;
+  max-width: 960px;
+  height: 100%;
+}
+
+.menu-item {
+  display: flex;
+  width: 50%;
+  list-style-type: none;
+  padding: 0 1rem;
+  margin: 0 0 1rem;
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+header {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.spacer {
+  content: "";
+  width: 100%;
+  height: 1px;
+  margin: 0 0.5rem;
+  border-bottom: 1px dashed #412814;
+  flex: 1;
+}
+
+.beverage-spacer {
+  width: 50%;
+  height: 1px;
+  margin: 0 0.5rem;
+  border-bottom: 1px dashed #412814;
+}
+
+.beverages-items {
+  display: flex;
+  width: 50%;
+  padding: 0 1rem;
+  margin: 0 0 1rem;
+}
+
+.beverages-list {
+  display: flex;
+  list-style-type: none;
+  text-align: center;
+  display: flex;
+  margin: 20px;
+}
+
+.beverage-header {
+  display: flex;
+  margin: 0;
+}
+
+.menu-title {
+  padding-top: 20px;
+}
+
+/* End of menu page formatting*/
+
+.container{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.container > div{
+  margin: 5px;
+  padding:10px;
+  width: 100%;
+  }
+
+  @media (max-width: 800px) {
+    .container {
+      flex-direction: column;
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    .container {
+      flex-direction: column;
+    }
+  }
+.staffnames{
+  border: solid 4px;
+  border-color: #849ca8;
+  padding:10px;
+}
+
+.under{
+border-bottom: 1px dashed #412814;
 }
